added GraphQL for Users

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
+NODE_ENV = 'development'
 PORT = 4000
 MONG_URI = mongodb+srv://tectepic:tectepic@cluster0.7kodsu1.mongodb.net/Naayari_Tours?retryWrites=true&w=majority
