--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server/server.js",
-    "dev": "nodemon server/server.js"
+    "start": "concurrently \"node server/server.js\" \"node server/util/schedule.js\"",
+    "dev": "concurrently \"nodemon server/server.js\" \"nodemon server/util/schedule.js\""
   },
   "keywords": [],
   "author": "",
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
+    "concurrently": "^8.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -20,6 +21,8 @@
     "graphql": "^15.8.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.10.0",
+    "node-schedule": "^2.1.1",
+    "nodemailer": "^6.9.3",
     "nodemon": "^2.0.20"
   }
 }
