--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "graphql": "^15.8.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.10.0",
+    "node-fetch": "^3.3.1",
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.3",
     "nodemon": "^2.0.20"
