--- a/package.json
+++ b/package.json
@@ -11,18 +11,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-boost": "^0.4.9",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "colors": "^1.4.0",
     "concurrently": "^8.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-graphql": "^0.12.0",
-    "graphql": "^15.8.0",
+    "graphql": "^16.3.0",
+    "graphql-http": "^1.20.0",
+    "graphql-request": "^6.1.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.10.0",
-    "node-fetch": "^3.3.1",
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.3",
     "nodemon": "^2.0.20"
