--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "graphql": "^16.3.0",
-    "graphql-http": "^1.20.0",
+    "express-graphql": "^0.12.0",
+    "graphql": "^15.8.0",
     "graphql-request": "^6.1.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.10.0",
