--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "express-graphql": "^0.12.0",
+    "fs": "^0.0.1-security",
+    "googleapis": "^120.0.0",
     "graphql": "^15.8.0",
     "graphql-request": "^6.1.0",
     "jsonwebtoken": "^9.0.0",
